--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,9 @@ jobs:
     environment: hoao
     steps:
     
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v2.10.0
+      
     - name: Docker Login
       uses: docker/login-action@v2.2.0
       with:
