--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ jobs:
     environment: hoao
     steps:
     
+    - uses: actions/checkout@v3
+        
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v2.10.0
       
